--- a/dom-style.css
+++ b/dom-style.css
@@ -18,6 +18,7 @@ dl.dom-interface-definition dd {
   display: block;
   margin-left: 3em;
   padding-left: 0;
+  overflow: visible;
 }
 
 .dom-interface-definition dt .DOMa {
@@ -58,6 +59,9 @@ dl.dom-interface-definition dd {
   text-indent: -3em;
 }
 
+code.DOMi, code.DOMm, code.DOMa {
+  -moz-binding: url(/www/style/text/wrap.xbl#wbr-qname);
+}
 
 /* Revision: $Date: 2005/06/25 14:05:40 $ */
 
