--- a/xpointer-style.css
+++ b/xpointer-style.css
@@ -2,39 +2,58 @@
 
 dl.xpointer-scheme-definition {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  min-width: 11em;
   border-style: none;
+  -moz-border-radius: 20px;
+  padding: 0.4em 0.8em;
   background-color: rgb(221, 238, 255);
   color: black;
 }
 
-.xpointer-scheme-definition dt {
+div.fig-body > dl.xpointer-scheme-definition {
+  width: 90%;
+}
+
+
+dl.xpointer-scheme-definition:before {
+  content: "XPointer scheme 定義";
+  display: block;
+  border-bottom: 4px white solid;
+  margin-bottom: 0.3em;
+  font-weight: bolder;
+  font-family: sans-serif;
+}
+
+dl.xpointer-scheme-definition dt {
   display: block;
   float: left;
-  clear: both;
-  margin: 0;
-  border-style: none;
-  padding: 0.5em 0.7em;
+  clear: left;
   width: 10em;
+  margin: 0 0.2em 0.5em 0;
+  border-style: none;
+  padding: 0.2em 0.2em 0.2em 0.5em;
   list-style: none;
+  text-indent: 0;
   font-weight: normal;
 }
-.xpointer-scheme-definition dt:after {
+
+dl.xpointer-scheme-definition dt:after {
   content: " : ";
   display: inline;
 }
 
-.xpointer-scheme-definition dd {
+dl.xpointer-scheme-definition dd {
   display: block;
-  margin: 0 0 0 2em;
+  margin: 0 0 0.5em 0;
   border-style: none;
-  padding: 0.5em 0.7em;
+  padding: 0.2em 0.5em;
+  text-indent: 0;
   min-height: 4em;
   list-style: none;
   font-weight: normal;
-}
-
-.xpointer-scheme-definition dl + * {
-  clear: both;
 }
 
 /* Links to XPointer specifications */
